<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="android.deroid.com.fasteksi">
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#080000" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="60dp"
        android:background="#080000" />

    <LinearLayout
        android:id="@+id/layout_login"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:layout_marginTop="40dp"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/mobilenumber"
            android:textColor="@color/textcolor"
            android:textSize="25sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:background="@drawable/round_corner" >

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="+91 " />

            <EditText
                android:id="@+id/etext_phone_number"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:background="@drawable/round_corner"
                android:inputType="number"
                android:maxLength="10"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:text="@string/password"
        android:textColor="@color/textcolor"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etext_password"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@drawable/round_corner"
        android:inputType="textWebPassword" />


    <CheckBox
        android:id="@+id/checkbox_credentialsave"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:text="@string/checkbox" />


    <Button
        android:id="@+id/btn_sign_in"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:background="@drawable/round_btncorner"
        android:text="@string/btnsignin" />

    <LinearLayout
        android:id="@+id/layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">


        <LinearLayout
            android:id="@+id/layout_forgetpassword"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/img_key"
                android:layout_width="20sp"
                android:layout_height="20sp"
                android:src="@drawable/key" />

            <TextView
                android:id="@+id/txt_forgetpassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/forgetpassword"
                android:textColor="@color/textcolor" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_new_user"
            android:layout_width="0dp"
            android:layout_weight="0.60"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/img_user"
                android:layout_width="20sp"
                android:layout_height="20sp"
                android:src="@drawable/user" />

            <TextView
                android:id="@+id/txt_newuser"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:text="@string/newuser"
                android:textColor="@color/textcolor" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>