<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="12sp">


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#080000" />

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="60dp"
        android:background="#080000" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="Hello There!"
        android:textColor="@color/textcolor"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:text="You seem to be new here."
        android:textStyle="normal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:text="To continue. tell us a little about yourself." />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/mobilenumber"
        android:textColor="@color/textcolor"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etext_cell_number"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:maxLength="10"
        android:background="@drawable/round_corner"
        android:hint="Enter mobile number"
        android:inputType="phone" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:text="This will be used as your Meru login ID."
        android:textStyle="normal" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:text="@string/email"
        android:textColor="@color/textcolor"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etext_email"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:background="@drawable/round_corner"
        android:hint="Enter email id"
        android:inputType="textEmailAddress" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.5"
        android:singleLine="true"
        android:text="Enter a valid email address as all further communication will be  send there."
        android:textStyle="normal" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:text="@string/name"
        android:textColor="@color/textcolor"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etext_name"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_gravity="center"
        android:background="@drawable/round_corner"
        android:hint="Enter full name"
        android:inputType="textPersonName" />

<!--        <CheckBox
            android:id="@+id/terms_and_conditions_check_box"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="7dp"
            android:layout_gravity="center"
            android:textColor="@color/textcolor"
            android:text="@string/terms_and_conditions"
            android:checked="true" />-->
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal" >

        <CheckBox
            android:id="@+id/terms_and_conditions_check_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:checked="false" />

        <TextView
            android:id="@+id/termsncond_txv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="5dp"
            android:text="@string/terms_and_conditions" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="30sp"
        android:background="@drawable/round_btncorner"
        android:text="Register" />

</LinearLayout>